Javers Implementation: Log audit event